--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js features/test.feature"
+    "test": "cucumber-js -f @cucumber/pretty-formatter features/test.feature"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,8 @@
   "dependencies": {
     "@cucumber/cucumber": "^8.3.0",
     "chai": "^4.3.6"
+  },
+  "devDependencies": {
+    "@cucumber/pretty-formatter": "^1.0.0-alpha.2"
   }
 }
